Closed
Bug 1496839
Opened 7 years ago
Closed 7 years ago
Crash in nsSubDocumentFrame::GetRenderFrameParent
Categories
(Core :: Web Painting, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla64
Tracking | Status | |
---|---|---|
firefox-esr60 | --- | unaffected |
firefox62 | --- | unaffected |
firefox63 | --- | unaffected |
firefox64 | --- | fixed |
People
(Reporter: mccr8, Assigned: mikokm)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
This bug was filed from the Socorro interface and is
report bp-573d8855-24fb-4c96-a698-629230181005.
=============================================================
Top 10 frames of crashing thread:
0 libxul.so nsSubDocumentFrame::GetRenderFrameParent const xpcom/base/nsCOMPtr.h:919
1 libxul.so nsDisplayRemote::HasDeletedFrame const layout/ipc/RenderFrameParent.cpp:429
2 libxul.so RetainedDisplayListBuilder::PreProcessDisplayList layout/painting/RetainedDisplayListBuilder.cpp:149
3 libxul.so RetainedDisplayListBuilder::AttemptPartialUpdate layout/painting/RetainedDisplayListBuilder.cpp:1340
4 libxul.so nsLayoutUtils::PaintFrame layout/base/nsLayoutUtils.cpp:3681
5 libxul.so mozilla::PresShell::Paint layout/base/PresShell.cpp:6350
6 libxul.so nsViewManager::ProcessPendingUpdatesForView view/nsViewManager.cpp:480
7 libxul.so nsViewManager::ProcessPendingUpdates view/nsViewManager.cpp:1102
8 libxul.so nsRefreshDriver::Tick layout/base/nsRefreshDriver.cpp:2046
9 libxul.so mozilla::RefreshDriverTimer::TickRefreshDrivers layout/base/nsRefreshDriver.cpp:325
=============================================================
This is a Nightly-only crash. It looks like null derefs. There's a small but steady number of these, so I figured I'd file it.
Assignee | ||
Updated•7 years ago
|
Assignee: nobody → mikokm
Status: NEW → ASSIGNED
Priority: -- → P3
Assignee | ||
Comment 1•7 years ago
|
||
Pushed by mikokm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/8a1bcc91affb
Avoid dereferencing null frame r=mattwoodrow
![]() |
||
Comment 3•7 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
status-firefox64:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
Updated•7 years ago
|
status-firefox62:
--- → unaffected
status-firefox63:
--- → unaffected
status-firefox-esr60:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•