Bug 1496839 - Avoid dereferencing null frame r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D8882